<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initial_screen_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".InitialScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".InitialScreen"
        android:orientation="vertical">

        <TextView
            android:id="@+id/initial_screen_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_screen_header"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/initial_screen_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_screen_info"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/initial_screen_header"/>

        <Button
            android:id="@+id/countries_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/initial_screen_button"
            android:layout_below="@+id/initial_screen_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>
        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/go_to_settings_button"
            android:layout_below="@+id/countries_list_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/about_app_button"
            android:layout_below="@+id/settings_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/countries"
            android:layout_below="@id/about_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>

    </RelativeLayout>

</FrameLayout>
