<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        tools:context=".NoteDescription">
        <ImageView
            android:id="@+id/coat_of_arms_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:contentDescription="@string/coat_of_arms"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/capital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/date_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:hint="@string/hint_text"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/choose_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_date"
                android:textSize="@dimen/text_30"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                />
            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/choose_date_view"
                />
            <Button
                android:id="@+id/change_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:text="@string/change_date_button"
                android:layout_below="@id/date_picker"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

